applying filter, map and collect