@@ -1,14 +1,14 @@
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Main {
     public static void main(String[] args) {
-        List<String> categories = Arrays.asList("java", "stream", "api");
-        List<String> uppercased = categories.stream()
-                .map(String::toUpperCase)
+        List<String> items = List.of("apple", "banana", "apricot", "cherry", "avocado");
+        List<Integer> lengths = items.stream()
+                .filter(n -> n.startsWith("a"))
+                .map(n -> n.length())
                 .collect(Collectors.toList());
 
-        System.out.println(uppercased);
+        System.out.println(lengths);
     }
 }
